既往史、疾病

--- a/src/view/symptom/symptom.less
+++ b/src/view/symptom/symptom.less
@@ -1,8 +1,51 @@
-.btn-con {
-    margin-bottom: 10px;
-    .symptom-btn {
-        margin-left: 5px;
-        padding: 4px 10px;
+.content {
+    background-color: #fff;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    padding: 15px 10px;
+    .tree-con {
+        margin-bottom: 10px;
+        width: 40%;
+        height: 100%;
+        float: left;
+        border-right: 1px solid #ddd;
+        .btn-con {
+            .symptom-btn {
+                margin-left: 5px;
+                padding: 4px 10px;
+                font-size: 14px;
+            }
+        }
+        .ivu-tree ul {
+            font-size: 14px;
+        }
+    }
+    .edit-con {
+        width: 60%;
+        float: left;
+        height: 100%;
         font-size: 14px;
+        .form-con {
+            width: 60%;
+            padding: 20px;
+            border: 1px solid #ddd;
+            margin-left: 100px;
+            .ivu-form-item {
+                margin-bottom: 15px;
+            }
+            .ivu-form .ivu-form-item-label {
+                font-size: 14px;
+            }
+            .ivu-input {
+                font-size: 14px;
+            }
+            .ivu-radio-wrapper {
+                font-size: 14px;
+            }
+            .ivu-btn {
+                font-size: 14px;
+            }
+        }
     }
 }
