症状页面修改

--- a/src/view/symptom/symptom.less
+++ b/src/view/symptom/symptom.less
@@ -17,6 +17,11 @@
                 font-size: 14px;
             }
         }
+        .ivu-tree {
+            overflow: auto;
+            height: 100%;
+            padding-bottom: 20px;
+        }
         .ivu-tree ul {
             font-size: 14px;
         }
